styles: Fix styling on firefox

--- a/src/components/BarChartTable/styles.scss
+++ b/src/components/BarChartTable/styles.scss
@@ -70,10 +70,6 @@
 
   .bar-chart-table__label-external-link {
     margin-left: $base__size * 0.5;
-
-    svg {
-      vertical-align: middle;
-    }
   }
 
   .bar-chart-table__label-icon {
